# rustDS

./: .gitignore  Cargo.toml  LICENSE.md  Makefile  Makefile.toml  README.md  link4.ld  link5.ld  link5i.ld
arm7/arm7app/: Cargo.toml  Makefile  armv4-none-dsi.json  link.ld
arm7/arm7app/src/: main.rs
arm7/arm7rt/: Cargo.toml  build.rs  link.ld
arm7/arm7rt/src/: consts.rs  lib.rs  regs.rs
arm7app/: Cargo.toml  Makefile  armv4-none-dsi.json
arm7app/.cargo/: config.toml
arm7app/src/: main.rs
arm7rt/: Cargo.toml
arm7rt/src/: consts.rs  lib.rs  regs.rs
arm9/arm9app/: Cargo.toml  Makefile  link.ld
arm9/arm9app/src/: main.rs
arm9/arm9rt/: Cargo.toml  armv5-none-dsi.json  build.rs  link.ld
arm9/arm9rt/src/: consts.rs  irq.rs  lib.rs  sync.rs  write.rs
arm9/arm9rt/src-S/: asminc.h  mpu_setup.s
arm9/arm9rt/src/displays/: vram.rs
arm9/arm9rt/src/regs/: mod.rs
arm9app/: Cargo.toml  Makefile  armv5-none-dsi.json
arm9app/.cargo/: config.toml
arm9app/src/: assets.rs  colors.rs  main.rs  particle.rs  sprites.rs  vertices.rs  world.rs
arm9rt/: Cargo.toml  build.rs
arm9rt/src/: consts.rs  critical_section.rs  dma.rs  dynamic_array.rs  irq.rs  lib.rs  macros.rs  new_wram.rs  power.rs  sync.rs  write.rs
arm9rt/src-S/: asminc.h  cache_asm.h  mpu_setup.s
arm9rt/src/displays/: a.rs  engine3d.rs  lcdc.rs  mod.rs  old_engine3d.rs  vram.rs
arm9rt/src/regs/: mod.rs
arm9rt/src/video/: a.rs  engine3d.rs  mod.rs  old_engine3d.old  vram.rs  vram_alloc.rs
eldpack/: pack.txt  terrain.raw
rsdstool/: Cargo.toml  Makefile
rsdstool/src/: main.rs
volatile/src/: lib.rs
