[package]
name = "arm9app"
version = "0.1.0"
authors = ["pedrosf"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arm9rt = { path = "../arm9rt" }
embedded-graphics = {version = "0.7.0-beta.1", features = ["fixed_point"]}
fixed = "1.15.0"
tinybmp = "0.2.3"
embedded-graphics-core = "0.1.1"