[package]
name = "arm9app"
version = "0.1.0"
authors = ["pedrosf"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arm9rt = { path = "../arm9rt" }
embedded-graphics = {version = "0.8.1", features = ["fixed_point"]}
fixed = "1.29.0"
tinybmp = "0.6.0"
embedded-graphics-core = "0.4.0"
[dependencies.nalgebra]
version = "0.34.1"
default-features = false
features = ["alloc", "libm-force"]

[dependencies.simba]
version = "0.9.1"
default-features = false
features = ["partial_fixed_point_support"]
