[package]
name = "arm9rt"
version = "0.1.0"
authors = ["pedrosf"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = true
panic = "abort"
incremental = false
codegen-units = 1

[profile.dev]
opt-level = 3
lto = true
panic = "abort"
incremental = false
codegen-units = 1

[dependencies]
voladdress = "1.4.0"
embedded-graphics-core = "0.4.0"
gba-proc-macro = "0.6"
fixed = "2.0.0-alpha.28.0"
typenum = "1.17.0"
buddy-alloc = "0.6.0"

[dependencies.derive_more]
version = "1.0.0"
default-features = false
features = ["add"]
