[package]
name = "arm9rt"
version = "0.1.0"
authors = ["pedrosf"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
voladdress = "1.4.0"
embedded-graphics-core = "0.4.0"
gba-proc-macro = "0.6"
fixed = "2.0.0-alpha.28.0"
typenum = "1.17.0"
buddy-alloc = "0.6.0"

[dependencies.derive_more]
version = "1.0.0"
default-features = false
features = ["add"]
