[package]
name = "arm9rt"
version = "0.1.0"
authors = ["pedrosf"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
voladdress = "1.4.0"
embedded-graphics-core = "0.4.0"
bitfrob = "1"
gba-proc-macro = "0.6"
typenum = "1.18.0"
fixed = "1.29.0"
embedded-alloc = "0.7.0"
critical-section = { version = "1.2",features = ["restore-state-bool"]}
[dependencies.derive_more]
version = "2.0.1"
default-features = false
features = ["add"]

[dependencies.nalgebra]
version = "0.33.2"
default-features = false
features = ["alloc", "libm-force"]

#[dependencies.simba]
#version = "0.9.1"
#default-features = false
#features = ["partial_fixed_point_support"]

[features]
default = ["dsi"]
dsi = []