[package]
name = "arm7rt"
version = "0.1.0"
authors = ["pedrosf"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = true
panic = "abort"

[profile.dev]
opt-level = 3
lto = true
panic = "abort"

[dependencies]
volatile = "0.2.6"

[build-dependencies]
cc = "1.0.40"